--- a/src/main/webapp/app/module/employee/view/list.html
+++ b/src/main/webapp/app/module/employee/view/list.html
@@ -7,6 +7,7 @@
       <th>ID</th>
       <th>Name</th>
       <th>E-Mail</th>
+      <th>Abilities</th>
     </tr>
   </thead>
   <tbody>
@@ -14,6 +15,7 @@
       <td>{{employee.id}}</td>
       <td><a href="#employees/{{employee.id}}" ng-bind="employee.name"></a></td>
       <td>{{employee.email}}</td>
+      <td><ul class="abilities"><li ng-repeat="ability in employee.abilities">{{ability.name}}</li></ul></td>
     </tr>
   </tbody>
 </table>
