Add color picker to employees

--- a/src/main/webapp/app/module/employee/view/detail.html
+++ b/src/main/webapp/app/module/employee/view/detail.html
@@ -25,6 +25,11 @@
 			</tags-input>
 		</p>
 	</label-group>
+	<label-group label="Color">
+		<p>
+			<input colorpicker class="form-control" ng-model="employee.color" type="text" ng-required="true">
+		</p>
+	</label-group>
 	<h2 class="sub-header">Contract</h2>
 	<label-group label="Start date">
 		<p class="input-group">
