--- a/src/main/webapp/app/module/capacity/view/capacity.html
+++ b/src/main/webapp/app/module/capacity/view/capacity.html
@@ -1,2 +1,38 @@
-<h1>Test</h1>
+<h1>Capacity</h1>
+
+<div class="row">
+<div class="col-sm-6">
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Abilities</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr ng-repeat="ability in abilities">
+      <td><input type="checkbox" ng-model="ability.selected" ng-change="loadChart();"/></td>
+      <td ng-bind="ability.name"></td>
+    </tr>
+  </tbody>
+</table>
+</div>
+<div class="col-sm-6">
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Employee</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr ng-repeat="employee in employees | filter: onlyForSelectedAbilities | orderBy: name">
+      <td><input type="checkbox" ng-model="employee.selected" ng-change="loadChart();"/></td>
+      <td ng-bind="employee.name"></td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+</div>
 <highchart id="chart1" config="chartConfig"></highchart>
