List number ob employees in UI

--- a/src/main/webapp/app/module/employee/view/list.html
+++ b/src/main/webapp/app/module/employee/view/list.html
@@ -1,6 +1,6 @@
 <h1 class="page-header">Employees</h1>  
 
-<h2 class="sub-header">Listing</h2>
+<h2 class="sub-header">Listing ({{employees.length}})</h2>
 <table class="table table-striped">
   <thead>
     <tr>
