--- a/src/main/webapp/app/module/employee/styles/employee.css
+++ b/src/main/webapp/app/module/employee/styles/employee.css
@@ -15,3 +15,11 @@ ul.abilities li:after {
 ul.abilities li:last-child:after {
     content: "";
 }
+
+.sortorder:after {
+	content: '\25bc';
+}
+
+.sortorder.reverse:after {
+	content: '\25b2';
+}
