--- a/src/main/webapp/app/module/capacity/view/capacity.html
+++ b/src/main/webapp/app/module/capacity/view/capacity.html
@@ -10,7 +10,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="ability in abilities">
+    <tr ng-repeat="ability in abilities | filter: search | orderBy: 'name'">
       <td><input type="checkbox" ng-model="ability.selected" ng-change="loadChart();"/></td>
       <td ng-bind="ability.name"></td>
     </tr>
@@ -26,7 +26,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="employee in employees | filter: onlyForSelectedAbilities | orderBy: name">
+    <tr ng-repeat="employee in employees | filter: onlyForSelectedAbilities | orderBy: 'name'">
       <td><input type="checkbox" ng-model="employee.selected" ng-change="loadChart();"/></td>
       <td ng-bind="employee.name"></td>
     </tr>
