--- a/src/main/webapp/app/module/employee/view/list.html
+++ b/src/main/webapp/app/module/employee/view/list.html
@@ -15,7 +15,7 @@
   <tbody>
     <tr ng-repeat="employee in employees | filter: search | orderBy:predicate:reverse">
       <td>{{employee.id}}</td>
-      <td><a href="#employees/{{employee.id}}" ng-bind="employee.name"></a></td>
+      <td><i style="background-color: {{employee.color}}; display: inline-block; vertical-align: middle; width: 16px; height: 16px; margin-right: 3px;"></i><a href="#employees/{{employee.id}}" ng-bind="employee.name"></a></td>
       <td>{{employee.email}}</td>
       <td><ul class="abilities"><li ng-repeat="ability in employee.abilities | orderBy: 'name'" ng-click="searchFilter(ability.name)" style="cursor: pointer;">{{ability.name}}</li></ul></td>
     </tr>
