Properly style buttons using bootstrap

--- a/src/main/webapp/app/module/employee/view/detail.html
+++ b/src/main/webapp/app/module/employee/view/detail.html
@@ -55,6 +55,6 @@
 			<input type="number" class="form-control" ng-model="employee.contract.workHoursPerDay" ng-required="true"/>
 		</p>
 	</label-group>
-	<button type="submit" ng-click="save()"><i class="fa fa-floppy-o"></i> Save</button>
+	<button type="submit" ng-click="save()" class="btn btn-default"><i class="fa fa-floppy-o"></i> Save</button>
 	</div>
 </form>
