--- a/src/main/webapp/app/module/employee/view/list.html
+++ b/src/main/webapp/app/module/employee/view/list.html
@@ -21,4 +21,4 @@
     </tr>
   </tbody>
 </table>
-<button ng-click="add()"><i class="fa fa-plus-circle"></i> Add</button>
+<button ng-click="add()" class="btn btn-default"><i class="fa fa-plus-circle"></i> Add</button>
