--- a/src/main/webapp/app/module/employee/view/detail.html
+++ b/src/main/webapp/app/module/employee/view/detail.html
@@ -61,6 +61,11 @@
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10"><button type="button" ng-click="showAddWorkingHoursDialog()" class="btn btn-default"><i class="fa fa-plus-circle"></i> Add</button></div>
 	</div>
+	<label-group label="Velocity {{employee.velocity}}%">
+		<p>
+			<slider ng-model="employee.velocity" min="0" step="1" max="100" value="hallo"></slider>
+		</p>
+	</label-group>
 	<button type="submit" ng-click="save()" class="btn btn-default"><i class="fa fa-floppy-o"></i> Save</button>
 	</div>
 </form>
