--- a/src/main/webapp/app/module/employee/view/detail.html
+++ b/src/main/webapp/app/module/employee/view/detail.html
@@ -56,7 +56,7 @@
 	</div>
 	<label-group label="Velocity {{employee.velocity}}%">
 		<p>
-			<slider ng-model="employee.velocity" min="0" step="1" max="100" value="hallo"></slider>
+			<slider ng-model="employee.velocity" min="0" step="1" max="100"></slider>
 		</p>
 	</label-group>
 	<button type="submit" ng-click="save()" class="btn btn-default"><i class="fa fa-floppy-o"></i> Save</button>
