--- a/src/main/webapp/app/module/capacity/view/capacity.html
+++ b/src/main/webapp/app/module/capacity/view/capacity.html
@@ -3,9 +3,20 @@
   <div class="row">
     <div class="form-group">
       <label class="col-sm-2 control-label" for="control_id_useVelocity">Take velocity into account</label>
-      <div class="col-sm-10 label-group-content" ng-transclude>
+      <div class="col-sm-10 label-group-content">
       <p>
         <input id="control_id_useVelocity" type="checkbox" ng-model="useVelocity" ng-change="loadChart();" />
+      </p>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="col-sm-2 control-label" for="control_id_episode">Episode</label>
+      <div class="col-sm-10 label-group-content">
+      <p>
+        <select ng-model="selectedEpisode" ng-model-options="{ getterSetter: true }">
+          <option value="">None</option>
+          <option ng-repeat="episode in episodes" value="{{episode.id}}">{{episode.name}} ({{episode.start}} - {{episode.end}})</option>
+        </select>
       </p>
       </div>
     </div>
@@ -41,7 +52,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="employee in employees | filter: onlyForSelectedAbilities | orderBy: 'name'">
+    <tr ng-repeat="employee in employees | filter: onlyForSelectedAbilities | filter: onlyForSelectedEpisodes | orderBy: 'name'">
       <td><input type="checkbox" ng-model="employee.selected" ng-change="loadChart();"/></td>
       <td ng-bind="employee.name"></td>
     </tr>
