--- a/src/main/webapp/app/module/episode/view/list.html
+++ b/src/main/webapp/app/module/episode/view/list.html
@@ -8,14 +8,20 @@
          <span class="sortorder" ng-show="predicate === 'id'" ng-class="{reverse:reverse}"></span></th>
       <th><span ng-click="order('name')">Name</span>
          <span class="sortorder" ng-show="predicate === 'name'" ng-class="{reverse:reverse}"></span></th>
+      <th><span ng-click="order('start')">Start</span>
+         <span class="sortorder" ng-show="predicate === 'start'" ng-class="{reverse:reverse}"></span></th>
+      <th><span ng-click="order('end')">End</span>
+         <span class="sortorder" ng-show="predicate === 'end'" ng-class="{reverse:reverse}"></span></th>
       <th>Employees</th>
     </tr>
   </thead>
   <tbody>
     <tr ng-repeat="episode in episodes | filter: search | orderBy:predicate:reverse">
       <td class="col-sm-1">{{episode.id}}</td>
-      <td class="col-sm-9"><a href="#episodes/{{episode.id}}" ng-bind="episode.name"></a></td>
-      <td class="col-sm-2">{{episode.employeeEpisodes.length}}</td>
+      <td class="col-sm-8"><a href="#episodes/{{episode.id}}" ng-bind="episode.name"></a></td>
+      <td class="col-sm-1">{{episode.start}}</td>
+      <td class="col-sm-1">{{episode.end}}</td>
+      <td class="col-sm-1">{{episode.employeeEpisodes.length}}</td>
     </tr>
   </tbody>
 </table>
