Add support to store amount of vacation days per employee

--- a/src/main/webapp/app/module/employee/view/employee.html
+++ b/src/main/webapp/app/module/employee/view/employee.html
@@ -49,6 +49,9 @@
 			</span>
 		</p>
 	</label-group>
+	<label-group label="Vacation (days/year)">
+		<input type="number" class="form-control" ng-model="employee.contract.vacationDaysPerYear" />
+	</label-group>
 	<h2 class="sub-header">Working Hours</h2>
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10"><div ui-calendar="calendarConfig" ng-model="eventSources"></div></div>
