Use central CSS class for employee colors

--- a/src/main/webapp/app/module/employee/view/employee.html
+++ b/src/main/webapp/app/module/employee/view/employee.html
@@ -28,7 +28,7 @@
 		<p class="input-group">
 			<input colorpicker type="text" class="form-control" ng-model="employee.color" ng-required="true"/>
 			<span class="input-group-btn">
-				<button type="button" class="btn btn-default"><i style="background-color: {{employee.color}}; display: inline-block; vertical-align: middle; width: 13px; height: 13px;"></i></button>
+				<button type="button" class="btn btn-default"><i class="color-picker-color" style="background-color: {{employee.color}};"></i></button>
 			</span>
 		</p>
 	</label-group>
