--- a/src/main/webapp/app/module/employee/view/employees.html
+++ b/src/main/webapp/app/module/employee/view/employees.html
@@ -17,7 +17,7 @@
   <tbody>
     <tr ng-repeat="employee in employees | filter: search | orderBy:predicate:reverse">
       <td>{{employee.id}}</td>
-      <td><i style="background-color: {{employee.color}}; display: inline-block; vertical-align: middle; width: 16px; height: 16px; margin-right: 3px;"></i><a href="#employees/{{employee.id}}" ng-bind="employee.name"></a></td>
+      <td><i class="employee-color" style="background-color: {{employee.color}};"></i><a href="#employees/{{employee.id}}" ng-bind="employee.name"></a></td>
       <td>{{employee.email}}</td>
       <td><ul class="abilities"><li ng-repeat="ability in employee.abilities | orderBy: 'name'" ng-click="searchFilter(ability.name)" style="cursor: pointer;">{{ability.name}}</li></ul></td>
       <td>{{employee.contract.workingHoursPerWeek}} ({{(employee.contract.workingHoursPerWeek / 40) * 100 | number: 0 }}%)</td>
