--- a/src/main/webapp/app/styles/global.css
+++ b/src/main/webapp/app/styles/global.css
@@ -2,3 +2,20 @@ ul.dropdown-menu {
 	padding: 0;
 	margin: 0;
 }
+
+.employee-color {
+	display: inline-block;
+	vertical-align: middle;
+	width: 16px;
+	height: 16px;
+	margin-right: 3px;
+	border-radius: 4px;
+}
+
+.color-picker-color {
+	display: inline-block;
+	vertical-align: middle;
+	width: 13px;
+	height: 13px;
+	border-radius: 2px;
+}
