Show menu icon also in the page header

--- a/src/main/webapp/app/module/absence/view/absence.html
+++ b/src/main/webapp/app/module/absence/view/absence.html
@@ -1,4 +1,4 @@
-<h1 class="page-header">Absences</h1>
+<h1 class="page-header"><i class="fa fa-pie-chart"></i>Absences</h1>
 
 <div class="row">
   <!-- This should be a <label-group>, but I failed at understanding https://github.com/angular/angular.js/wiki/Understanding-Scopes -->
