--- a/src/main/webapp/app/module/calendar/view/calendar.html
+++ b/src/main/webapp/app/module/calendar/view/calendar.html
@@ -1,3 +1,5 @@
+<h1 class="page-header"><i class="fa fa-calendar"></i>Calendar</h1>
+
 <div class="btn-group" data-toggle="buttons">
 	<label class="btn btn-primary active {{calendar.id}}" ng-repeat="calendar in calendars">
 		<input type="checkbox" autocomplete="off"> {{calendar.name}}
