--- a/src/main/webapp/app/module/employee/view/employee.html
+++ b/src/main/webapp/app/module/employee/view/employee.html
@@ -1,4 +1,4 @@
-<h1 class="page-header">{{!employee.name ? '&nbsp;' : employee.name}}</h1>
+<h1 class="page-header"><i class="fa fa-users"></i>{{!employee.name ? '&nbsp;' : employee.name}}</h1>
 
 <form name="form">
 	<h2 class="sub-header">Personal data</h2>
