--- a/src/main/webapp/app/module/ical_import/view/ical_import.html
+++ b/src/main/webapp/app/module/ical_import/view/ical_import.html
@@ -1,4 +1,4 @@
-<h1 class="page-header">{{!icalImport.name ? '&nbsp;' : icalImport.name}}</h1>
+<h1 class="page-header"><i class="fa fa-calendar-plus-o"></i>{{!icalImport.name ? '&nbsp;' : icalImport.name}}</h1>
 
 <form name="form">
 	<label-group label="ID">
