--- a/src/main/webapp/app/module/ical_import/view/ical_imports.html
+++ b/src/main/webapp/app/module/ical_import/view/ical_imports.html
@@ -1,4 +1,4 @@
-<h1 class="page-header">iCal Imports</h1>
+<h1 class="page-header"><i class="fa fa-calendar-plus-o"></i>iCal Imports</h1>
 
 <h2 class="sub-header">Listing ({{icalImports.length}})</h2>
 <table class="table table-striped">
