--- a/src/main/webapp/app/module/capacity/view/capacity.html
+++ b/src/main/webapp/app/module/capacity/view/capacity.html
@@ -1,4 +1,4 @@
-<h1>Capacity</h1>
+<h1 class="page-header"><i class="fa fa-line-chart"></i>Capacity</h1>
 
   <div class="row">
     <div class="form-group">
