--- a/src/main/webapp/app/module/employee/view/employees.html
+++ b/src/main/webapp/app/module/employee/view/employees.html
@@ -1,4 +1,4 @@
-<h1 class="page-header">Employees</h1>
+<h1 class="page-header"><i class="fa fa-users"></i>Employees</h1>
 
 <h2 class="sub-header">Listing ({{employees.length}})</h2>
 <table class="table table-striped">
