--- a/src/main/webapp/app/module/episode/view/episode.html
+++ b/src/main/webapp/app/module/episode/view/episode.html
@@ -1,4 +1,4 @@
-<h1 class="page-header">{{!episode.name ? '&nbsp;' : episode.name}}</h1>
+<h1 class="page-header"><i class="fa fa-caret-square-o-right"></i>{{!episode.name ? '&nbsp;' : episode.name}}</h1>
 
 <form name="form">
 	<label-group label="ID">
