--- a/src/main/webapp/app/module/episode/view/episodes.html
+++ b/src/main/webapp/app/module/episode/view/episodes.html
@@ -1,4 +1,4 @@
-<h1 class="page-header">Episodes</h1>
+<h1 class="page-header"><i class="fa fa-caret-square-o-right"></i>Episodes</h1>
 
 <h2 class="sub-header">Listing ({{episodes.length}})</h2>
 <table class="table table-striped">
