--- a/src/main/webapp/app/module/calendar/view/calendar.html
+++ b/src/main/webapp/app/module/calendar/view/calendar.html
@@ -1,9 +1,7 @@
 <h1 class="page-header"><i class="fa fa-calendar"></i>Calendar</h1>
 
-<div class="btn-group" data-toggle="buttons">
-	<label class="btn btn-primary active {{calendar.id}}" ng-repeat="calendar in calendars">
-		<input type="checkbox" autocomplete="off"> {{calendar.name}}
-	</label>
+<div class="btn-group">
+	<label class="btn btn-primary active {{calendar.id}}" ng-model="calendar.selected" ng-repeat="calendar in calendars" ng-click="publishAllEvents()" uib-btn-checkbox>{{calendar.name}}</label>
 </div>
 
-<div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
+<div ui-calendar="calendarConfig" ng-model="eventSources" calendar="myCalendar"></div>
