--- a/src/main/webapp/app/module/episode/view/episode.html
+++ b/src/main/webapp/app/module/episode/view/episode.html
@@ -1,6 +1,6 @@
 <h1 class="page-header"><i class="fa fa-caret-square-o-right"></i>{{!episode.name ? '&nbsp;' : episode.name}}</h1>
 
-<form name="form">
+<form class="form-horizontal">
 	<label-group label="ID">
 		<p>
 			<input type="text" class="form-control" ng-model="episode.id" disabled></input>
