--- a/src/main/webapp/app/module/absence/view/absence.html
+++ b/src/main/webapp/app/module/absence/view/absence.html
@@ -1,5 +1,6 @@
 <h1 class="page-header"><i class="fa fa-pie-chart"></i>Absences</h1>
 
+<form class="form-horizontal">
 <div class="row">
   <!-- This should be a <label-group>, but I failed at understanding https://github.com/angular/angular.js/wiki/Understanding-Scopes -->
   <div class="form-group">
@@ -14,6 +15,7 @@
     </div>
   </div>
 </div>
+</form>
 
 <div class="row">
   <div class="col-sm-6">
