--- a/src/main/webapp/app/module/capacity/view/capacity.html
+++ b/src/main/webapp/app/module/capacity/view/capacity.html
@@ -1,12 +1,14 @@
 <h1 class="page-header"><i class="fa fa-line-chart"></i>Capacity</h1>
 
+<form class="form-horizontal">
   <div class="row">
     <div class="form-group">
       <label class="col-sm-2 control-label" for="control_id_useVelocity">Take velocity into account</label>
       <div class="col-sm-10 label-group-content">
-      <p>
+      <div class="checkbox">
         <input id="control_id_useVelocity" type="checkbox" ng-model="useVelocity" ng-change="loadChart();" />
-      </p>
+        <label></label>
+      </div>
       </div>
     </div>
     <div class="form-group">
@@ -66,6 +68,7 @@
       <button ng-click="addAndFilter()" class="btn btn-default"><i class="fa fa-plus-circle"></i> Add AND block</button>
     </label-group>
   </div>
+</form>
 
   <ul class="nav nav-pills">
     <li ng-class="{active:selected == 'chart'}"><a href ng-click="select('chart')">Chart</a></li>
