--- a/src/main/webapp/app/module/employee/view/employee.html
+++ b/src/main/webapp/app/module/employee/view/employee.html
@@ -1,6 +1,6 @@
 <h1 class="page-header"><i class="fa fa-users"></i>{{!employee.name ? '&nbsp;' : employee.name}}</h1>
 
-<form name="form">
+<form class="form-horizontal">
 	<h2 class="sub-header">Personal data</h2>
 	<label-group label="ID">
 		<p>
