--- a/src/main/webapp/app/module/ical_import/view/ical_import.html
+++ b/src/main/webapp/app/module/ical_import/view/ical_import.html
@@ -1,6 +1,6 @@
 <h1 class="page-header"><i class="fa fa-calendar-plus-o"></i>{{!icalImport.name ? '&nbsp;' : icalImport.name}}</h1>
 
-<form name="form">
+<form class="form-horizontal">
 	<label-group label="ID">
 		<p>
 			<input type="text" class="form-control" ng-model="icalImport.id" disabled></input>
